更新sessions接口。
